# hispec

./: .gitignore  .gitmodules  Makefile  Mk.instrument  README.md  install.sh  pyproject.toml
.github/workflows/: docs.yml  documentation.yml  pylint.yml
benchmark/: Benchmark_CPULoop.cpp  Benchmark_SPIControl.cpp  Benchmark_SPIControl_Plotter.py
cli/: gimbal  smc
config/example/: hsfei.yaml
config/hscal/: hscal_blue_fw1.yaml  hscal_blue_fw2.yaml  hscal_grey_fw.yaml  hscal_hkcalfwheel1.yaml  hscal_hkcalfwheel2.yaml  hscal_hkgcellfwheel.yaml  hscal_red_fw1.yaml  hscal_red_fw2.yaml  hscal_yjcalfwheel1.yaml  hscal_yjcalfwheel2.yaml
config/hsfei/: hsfei.yaml  hsfei_adc.yaml  hsfei_atcfwheel.yaml  hsfei_atcpickoff.yaml  hsfei_filterwheel.yaml  hsfei_focpupsel.yaml  hsfei_hkpiaagim.yaml  hsfei_msel.yaml  hsfei_pickoff.yaml  hsfei_rlight.yaml  hsfei_yjpiaagim.yaml
daemons/generic/: .filterwheel.swp  filterwheel
daemons/hscal/: hkcalfwheel1  hketatten  hscal.config  yjetatten.py
daemons/hsdewar/: Makefile
daemons/hsdewar/config/: Makefile
daemons/hsdewar/def/: rspec2.defs
daemons/hsdewar/xml/: lakeshore224Temperature.xml.sin  lakeshoreOutput.xml.sin
daemons/hsfei/: adc  atcfwheel  atcpress  hkpiaagim  hsfei.config  hsfei.yaml  pi-daemon  piaa-gimbalmount  pickoff  pickoff_raw  test_atcpress.py  yjpiaagim
daemons/hsmet/: calyjrack  hsmet.config
daemons/hsowenv/def/: rspec.defs
daemons/hsowenv/xml/: Makefile  owenv.xml.sin
daemons/hsvgc/: Mk.service
daemons/hsvgc/config/: hsvgc_fei.conf  hsvgc_fei_stdiosvc.conf
daemons/hsvgc/dispatcher/: hs_vgcd.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  requirements.txt  search.html
docs/.doctrees/: environment.pickle
docs/_site/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_site/.doctrees/: environment.pickle  index.doctree
docs/_site/_sources/: index.rst.txt
docs/build_notes/: fei_server_build_notes.rst  host_machine_build_notes.rst  rtc_buildnote.rst
docs/source/: conf.py
hispec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hispec/hsdewar/xml/: index.xml.sin  lakeshore224Device.xml.sin  lakeshoreTemperature.xml.sin
hispec/hspower/: Mk.service
hispec/hspower/xml/: Makefile
hispec/hsssd/: Mk.service  hsssd.conf.sin
hispec/middle_layer/: BLUE_PIAA.py  RED_PIAA.py  devices.config
hispec/playbooks/: hispec-host.yml
hispec/util/: __init__.py
hsdewar/: Mk.service
hsdewar/def/: rspec1.defs
hsdewar/dispatcher/: Makefile  hs_lakeshored.sin
hsdewar/xml/: Makefile  lakeshore224Dispatcher.xml.sin  lakeshoreController.xml.sin  lakeshoreDispatcher.xml.sin  lakeshoreInput.xml.sin
hsfei/: pyproject.toml  test.py
hsfei/config/: pi_named_positions.json
hsfei/hsfei/: __init__.py
hsfei/hsfei/newport/: README.md  __init__.py  controller.py
hsfei/hsfei/newport/tests/: test_basic.py
hsfei/hsfei/pi/: README.md  __init__.py  controller.py
hsfei/hsfei/pi/tests/: test.py  test_basic.py  test_connection.py  test_mock.py
hsfei/hsfei/sunpower/: README.md  __init__.py  controller.py
hsfei/hsfei/xeryon/: README.md  __init__.py  axis.py  communication.py  config.py  controller.py  stage.py  units.py  utils.py
hsfei/hsfei/xeryon/tests/: axis_test.py  communication_test.py  controller_test.py  utils_test.py
hsfei/hsgim/: BlueGimbalMount.ini  PPC102_lib.py
hsfei/hsgim/tests/: __init__.py  test_gimbal_mount.py
hsfei/pi/: README.md  pyproject.toml
hsfei/pi/pi_controller/: __init__.py  controller.py
hsfei/pi/tests/: test.py  test_connection.py
hsfei/src/hsfei/sunpower/: __init__.py
hsfei/sunpower/: README.md  pyproject.toml
hsfei/sunpower/controller/: __init__.py  controller.py
hsowenv/: Makefile  Mk.service
hsowenv/config/: Makefile
hsowenv/dispatcher/: Makefile  hsowenvd.sin
hsowenv/xml/: index.xml.sin
hspower/config/: Makefile
hspower/xml/: index.xml.sin
hsssd/: Makefile
hsssd/xml/: index.xml.sin
hsvgc/config/: Makefile
init.d/: Makefile  lickStartStop.conf  std_script.conf.sin
qt/: Makefile  hispec_gui.sin
qt/designer/: Main.ui  Makefile  SPEC.ui  __init__.py
scripts/fei/: CouplingOptimizer.py  FAM_Scans.py  FOV_CouplingCheck.py  FOV_CouplingCheck_FSMRecenter.py  FOV_Vignetter_CircleScan_redPM.py  FSM_Scans.py  FilterWheel_CLI  Fitter.py  Scan_Plotting.py  SimulateFieldPoint.py  redPM_ReadForFixedTime.py  redPM_cmds.py
src/hispec/: __init__.py  config.py  daemon.py
src/hispec/util/inficon/: README.md  inficonvgc502.py  pyproject.toml
src/hispec/util/inficon/tests/: test_inficonvgc502.py
src/hispec/util/lakeshore/: README.md  lakeshore.py  pyproject.toml
src/hispec/util/lakeshore/tests/: test_lakeshore_basic.py
src/hispec/util/newport/: README.md  pyproject.toml  smc100pp.py
src/hispec/util/newport/tests/: test_basic.py
src/hispec/util/pi/: __init__.py  pyproject.toml
src/hispec/util/pi/tests/: test_pi_mock.py
src/hispec/util/standa/: README.md  __init__.py  pyproject.toml  smc8.py
src/hispec/util/standa/tests/: default_smc8_test.py  mock_smc8_test.py  physical_smc8_test.py
src/hispec/util/sunpower/: .gitignore  README.md  __init__.py  pyproject.toml  sunpower_cryocooler.py
src/hispec/util/sunpower/tests/: test_sunpower.py
src/hispec/util/thorlabs/: README.md  __init__.py  fw102c.py  ppc102.py  pyproject.toml
src/hispec/util/thorlabs/tests/: default_fw102c_test.py  default_ppc102_test.py  mock_fw102c_test.py  mock_ppc102_test.py  physical_fw102c_test.py  physical_ppc102_test.py
src/hispec/util/xeryon/: README.md  __init__.py  axis.py  communication.py  config.py  pyproject.toml  stage.py  utils.py  xeryon_controller.py
src/hispec/util/xeryon/config/: xeryon_default_settings.txt
src/hispec/util/xeryon/tests/: test_xeryon_axis.py  test_xeryon_communication.py  test_xeryon_controller.py  test_xeryon_utils.py
tests/config/: xeryon_default_settings.txt
util/: __init__.py
util/config/: pi_named_positions.json
util/inficon/: inficonvgc502.py
util/newport/: README.md  smc100pp.py
util/pi/: README.md  __init__.py
util/xeryon/: stage.py
(+126 files in other folders)
