[tool.setuptools]
packages = ["util"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hispec"
version = "0.1.0"
description = "HISPEC Instrument Control Software"
authors = [
    { name="Michael Langmayr", email="langmayr@caltech.edu" },
    { name="Don Neill", email="neill@astro.caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pipython",
    "pyserial"
]
