[tool.setuptools.packages.find]
where = ["src"]
include = ["hispec", "hispec.*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hispec"
version = "0.1.0"
description = "HISPEC Instrument Control Software"
authors = [
    { name="Michael Langmayr", email="langmayr@caltech.edu" },
    { name="Don Neill", email="neill@astro.caltech.edu" },
    { name="Prakriti Gupta", email="pgupta@astro.caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "keyring",
    "pipython",
    "pyserial",
    "libximc",
    "scipy",
    "pyyaml",
    "libby@git+https://github.com/CaltechOpticalObservatories/libby.git",
    "hardware_device_base@git+https://github.com/COO-Utilities/hardware_device_base"
]
