[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hsfei"
version = "0.1.0"
description = "Low level libraries for HISPEC FEI components"
authors = [
    { name="Michael Langmayr", email="langmayr@caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pipython",
    "pyserial"
]

[tool.setuptools.packages.find]
where = ["hsfei"]
