[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunpower_controller"
version = "0.1.0"
description = "Async Python interface for controlling Sunpower cryocoolers via serial"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyserial"
]