[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inficon"
version = "0.1.0"
description = "OneWire controller software"
authors = [
    { name="Michael Langmayr", email="langmayr@caltech.edu" },
    { name="Don Neill", email="neill@astro.caltech.edu" },
    { name="Prakriti Gupta", email="pgupta@astro.caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "keyring",
    "pipython",
    "pyserial",
    "libximc"
]
[tool.pytest.ini_options]
pythonpath = [
    "."
]
