[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeshore"
version = "0.1.0"
description = "Lakeshore temperature controller software"
authors = [
    { name="Michael Langmayr", email="langmayr@caltech.edu" },
    { name="Don Neill", email="neill@astro.caltech.edu" },
    { name="Prakriti Gupta", email="pgupta@astro.caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "hardware_device_base@git+https://github.com/COO-Utilities/hardware_device_base#egg=main"
]
[tool.pytest.ini_options]
pythonpath = [
    "."
]
